fix: harden auth security configuration